# Unittesting

./: README.md  pyproject.toml
.github/workflows/: testing.yaml
src/Testing_project/: functions.py
src/Testing_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_functions.py
