[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63.2.0",
    "wheel>=0.37.1",
]

[project]
name = "Testing_project"
version = "0.0.1"
authors = [
    {name = "James McDonagh"},
]
description = "Example of unit testing"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dependencies = [
    "numpy>=1.24.0",
    "pytest>=8.2.2",
]
